--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -30,6 +30,8 @@
         <MtouchDebug>true</MtouchDebug>
         <CodesignProvision>VS: WildCard Development</CodesignProvision>
         <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
+<RunCodeAnalysis>true</RunCodeAnalysis><MtouchFloat32>true</MtouchFloat32>
+<MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
         <DebugType>none</DebugType>
@@ -42,7 +44,7 @@
         <ConsolePause>false</ConsolePause>
         <CodesignProvision>VS: WildCard Development</CodesignProvision>
         <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
-    </PropertyGroup>
+<RunCodeAnalysis>true</RunCodeAnalysis>    </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
