--- a/ManageGo.Android/Properties/AndroidManifest.xml
+++ b/ManageGo.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.17" package="com.ManageGo.ManageGo" android:versionCode="172">
-	<uses-sdk android:minSdkVersion="25" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.18" package="com.ManageGo.ManageGo" android:versionCode="173">
+	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.CAMERA" />
@@ -10,7 +10,7 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-feature android:name="android.hardware.camera.autofocus" />
-	<application android:label="ManageGo" android:icon="@drawable/ic_launcher">
+	<application android:label="ManageGo" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.ManageGo.pcm" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
