--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -15,13 +15,14 @@
         <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
         <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
         <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-        <TargetFrameworkVersion>v9.0.99</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
         <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
         <NuGetPackageImportStamp>
         </NuGetPackageImportStamp>
         <AndroidSupportedAbis>x86</AndroidSupportedAbis>
         <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
         <AndroidLinkMode>None</AndroidLinkMode>
+        <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <DebugSymbols>true</DebugSymbols>
@@ -36,7 +37,7 @@
         <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
         <AndroidSupportedAbis>x86_64;arm64-v8a</AndroidSupportedAbis>
         <AndroidUseAapt2>false</AndroidUseAapt2>
-</PropertyGroup>
+<RunCodeAnalysis>true</RunCodeAnalysis></PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <DebugType></DebugType>
         <Optimize>true</Optimize>
@@ -48,7 +49,6 @@
         <AndroidDexTool>d8</AndroidDexTool>
         <AndroidUseAapt2>false</AndroidUseAapt2>
         <AndroidSupportedAbis>armeabi-v7a;arm64-v8a</AndroidSupportedAbis>
-        <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
         <AndroidLinkMode>SdkOnly</AndroidLinkMode>
 </PropertyGroup>
     <ItemGroup>
@@ -73,7 +73,7 @@
             <Version>71.1610.0</Version>
         </PackageReference>
         <PackageReference Include="Xamarin.Forms">
-            <Version>4.2.0.778463</Version>
+          <Version>4.1.0.778454</Version>
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
