--- a/MGDataAccessLibrary/MGDataAccessLibrary.csproj
+++ b/MGDataAccessLibrary/MGDataAccessLibrary.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Models\EventCreateItem.config" />
