--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -48,7 +48,7 @@
         <LangVersion>Latest</LangVersion>
         <AndroidDexTool>d8</AndroidDexTool>
         <AndroidUseAapt2>false</AndroidUseAapt2>
-        <AndroidSupportedAbis>armeabi-v7a;arm64-v8a</AndroidSupportedAbis>
+        <AndroidSupportedAbis>arm64-v8a;armeabi-v7a;x86;x86_64</AndroidSupportedAbis>
         <AndroidLinkMode>SdkOnly</AndroidLinkMode>
 </PropertyGroup>
     <ItemGroup>
@@ -122,6 +122,9 @@
         <None Include="Assets\AboutAssets.txt" />
         <None Include="Properties\AndroidManifest.xml" />
         <None Include="packages.config" />
+        <None Include="google-services-1.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     <ItemGroup>
         <AndroidResource Include="Resources\layout\Tabbar.axml" />
@@ -492,7 +495,9 @@
         <Reference Include="System.Core" />
     </ItemGroup>
     <ItemGroup>
-        <GoogleServicesJson Include="google-services.json" />
+      <GoogleServicesJson Include="google-services.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </GoogleServicesJson>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
     <Import Project="..\packages\Xamarin.Android.Support.Annotations.28.0.0\build\monoandroid90\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.28.0.0\build\monoandroid90\Xamarin.Android.Support.Annotations.targets')" />
