--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -45,7 +45,8 @@
         <ConsolePause>false</ConsolePause>
         <CodesignProvision>VS: WildCard Development</CodesignProvision>
         <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
-<RunCodeAnalysis>true</RunCodeAnalysis>    </PropertyGroup>
+<RunCodeAnalysis>true</RunCodeAnalysis>    <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
+</PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
@@ -61,11 +62,8 @@
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <CodesignProvision>VS: WildCard Development</CodesignProvision>
         <DeviceSpecificBuild>false</DeviceSpecificBuild>
-        <MtouchSdkVersion>13.0</MtouchSdkVersion>
-        <MtouchFloat32>true</MtouchFloat32>
         <OptimizePNGs>
         </OptimizePNGs>
-        <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
         <MtouchLink>None</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
@@ -79,10 +77,6 @@
         <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <CodesignProvision>VS: WildCard Development</CodesignProvision>
-        <MtouchSdkVersion>13.0</MtouchSdkVersion>
-        <MtouchUseLlvm>true</MtouchUseLlvm>
-        <MtouchFloat32>true</MtouchFloat32>
-        <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
         <DebugType>none</DebugType>
@@ -180,10 +174,10 @@
             <Version>1.68.0</Version>
         </PackageReference>
         <PackageReference Include="Xamarin.Essentials">
-            <Version>1.3.0</Version>
+            <Version>1.3.1</Version>
         </PackageReference>
         <PackageReference Include="Xamarin.Forms">
-            <Version>4.2.0.778463</Version>
+            <Version>4.2.0.815419</Version>
         </PackageReference>
         <PackageReference Include="FreshMvvm">
             <Version>3.0.0</Version>
@@ -416,6 +410,7 @@
         <BundleResource Include="Resources\awaiting_response%402x.png" />
         <BundleResource Include="Resources\awaiting_response%403x.png" />
         <BundleResource Include="GoogleService-Info.plist" />
+        <BundleResource Include="Resources\ic_launcher.png" />
     </ItemGroup>
     <ItemGroup>
         <ITunesArtwork Include="iTunesArtwork%402x" />
