--- a/MGDataAccessLibrary/MGDataAccessLibrary.csproj
+++ b/MGDataAccessLibrary/MGDataAccessLibrary.csproj
@@ -14,6 +14,9 @@
     <Folder Include="BussinessLogic\" />
     <Folder Include="DataAccess\" />
     <Folder Include="Models\" />
+    <Folder Include="Models\Amenities\" />
+    <Folder Include="Models\Amenities\Requests\" />
+    <Folder Include="Models\Amenities\Responses\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="DataAccess.cs" />
