make categories required

--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -42,8 +42,8 @@
         <MtouchLink>None</MtouchLink>
         <MtouchArch>x86_64</MtouchArch>
         <ConsolePause>false</ConsolePause>
-        <CodesignProvision>VS: WildCard Development</CodesignProvision>
-        <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
+        <CodesignProvision>mgdist001</CodesignProvision>
+        <CodesignKey>iPhone Distribution: MANAGEGO LLC (4GH47MZ6ZW)</CodesignKey>
 <RunCodeAnalysis>true</RunCodeAnalysis>    <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
 </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
@@ -75,9 +75,9 @@
         <WarningLevel>4</WarningLevel>
         <MtouchArch>ARM64</MtouchArch>
         <ConsolePause>false</ConsolePause>
-        <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
+        <CodesignKey>iPhone Distribution: MANAGEGO LLC (4GH47MZ6ZW)</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-        <CodesignProvision>VS: WildCard Development</CodesignProvision>
+        <CodesignProvision>mgdist001</CodesignProvision>
         <MtouchFloat32>true</MtouchFloat32>
         <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     </PropertyGroup>
