amenity pages working

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -116,6 +116,7 @@
         <Compile Include="AppStoreOpenerImplementation.cs" />
         <Compile Include="ImageHandler.cs" />
         <Compile Include="CustomListview.cs" />
+        <Compile Include="CustomPicker.cs" />
     </ItemGroup>
     <ItemGroup>
         <None Include="Resources\AboutResources.txt" />
