--- a/ManageGo/ManageGo.csproj
+++ b/ManageGo/ManageGo.csproj
@@ -7,8 +7,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <LangVersion>8.0</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
@@ -44,5 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MGDataAccessLibrary\MGDataAccessLibrary.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Models\PMCBuilding.css" />
   </ItemGroup>
 </Project>
