--- a/MGDataAccessLibrary/MGDataAccessLibrary.csproj
+++ b/MGDataAccessLibrary/MGDataAccessLibrary.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Hashids.net" Version="1.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Models\EventCreateItem.config" />
